# CU

./: .gitignore  ExtClean.sh
CSPB 2270 - Data Structures/CSPB 2270 - Notes/CSPB 2270 - Chapter Notes/: main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.ptc  main.run.xml  main.tex  solutionclass.cls
CSPB 2270 - Data Structures/CSPB 2270 - Notes/CSPB 2270 - Class Notes/: main.tex
CSPB 2270 - Data Structures/CSPB 2270 - Notes/CSPB 2270 Class Notes/: main.aux  main.fdb_latexmk  main.fls  main.out  main.ptc  main.run.xml  main.tex  solutionclass.cls
CSPB 2270 - Data Structures/CSPB 2270 - Notes/CSPB 2270 Study Guide Template/: main.tex
CSPB 2270 - Data Structures/CSPB 2270 - Project/CSPB 2270 - Final Project/: README.md
CSPB 2270 - Data Structures/CSPB 2270 - Project/CSPB 2270 - Project Proposal/: main.tex
CSPB 2270 - Data Structures/CSPB 2270 - Project/CSPB 2270 - Sample Project/: CSPB 2270 - Sample Project.docx
CSPB 2270 - Data-Structures/CSPB 2270 - Programming Assignments/CSPB 2270 - Assignment 8 - Huffman Table/CSPB 2270 PA8 - Solution/: CMakeLists.txt
CSPB 2270: Data Structures/CSPB 2270: Programming Assignments/CSPB 2270: Assignment 1 - GitHub/: readme.md
CSPB 2400 - Computer Systems/CSPB 2400 - Notes/CSPB 2400 - Class Notes/: main.tex
CSPB 2400 - Computer Systems/CSPB 2400 - Notes/CSPB 2400 - Exam Notes/: main.tex
CSPB 2400 - Computer Systems/Notes/Class Notes/: main.tex
CSPB 2820 - Linear Algebra With Computer Science Applications/Assignments/Assignment 1 - Vectors/: main.tex
CSPB 2820 - Linear Algebra With Computer Science Applications/Assignments/Assignment 11 - Matrix Inverses/: main.tex
CSPB 2824 - Discrete Structures/Assignments/Assignment 8 - Induction/: main.tex
CSPB 3308 - Software Development Methods And Tools/Team Project/: jest.config.js  package-lock.json  package.json  recipe_genie.db
CSPB 4622 - Machine Learning/: .gitignore
CSPB Encyclopedia/: main.tex
CSPB Encyclopedia/Classes/: solutionclass.cls
CSPB Encyclopedia/LaTeX/: main.tex
CSPB Encyclopedia/Tex/: CSPB 2270.tex  CSPB 2400.tex  CSPB 2820.tex  CSPB 2824.tex  CSPB 3022.tex  CSPB 3104.tex  CSPB 3155.tex  CSPB 3308.tex  Introduction.tex  Table Of Contents.tex
Program Checklist/: flaskdjfa.tex  main.aux  main.tex  main1.tex
Scripts/: BuildEncyclopedia.sh  ExtClean.sh  LatexClean.sh
Templates/Assignment/: main.tex
Templates/Class Notes/: main.tex
Templates/Golden Class/: GoldenMain.cls
Templates/Solution Class/: GoldenClass.cls  GoldenMain.cls
(+1400 files in other folders)
